--- a/index.html
+++ b/index.html
@@ -3,7 +3,108 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/styles.css" />
     <title>Learn git</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="container"><h1>Learning Git</h1></div>
+    </header>
+    <main>
+      <div class="container">
+        <section>
+          <h2 class="main-title">Latest Articles</h2>
+          <div class="articles">
+            <article>
+              <h3>How to become a successfull web developer</h3>
+              <p class="author">by <span>John Smith</span></p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
+                culpa, molestias officia voluptatibus eaque assumenda nesciunt
+                ratione, modi repellendus deleniti corporis doloribus iusto, ab
+                libero veritatis quasi. Qui, blanditiis earum!
+              </p>
+              <p>
+                dolor sit amet, consectetur adipisicing elit. Dignissimos,
+                repellendus!
+              </p>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Distinctio provident veritatis tempora cupiditate voluptatem
+                nesciunt voluptatibus odit porro tempore exercitationem!
+              </p>
+            </article>
+            <article>
+              <h3>Best readmap for learnig Front End Development</h3>
+              <p class="author">by <span>Tom Odel</span></p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
+                culpa, molestias officia voluptatibus eaque assumenda nesciunt
+                ratione, modi repellendus deleniti corporis doloribus iusto, ab
+                libero veritatis quasi. Qui, blanditiis earum!
+              </p>
+              <p>
+                dolor sit amet, consectetur adipisicing elit. Dignissimos,
+                repellendus!
+              </p>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Distinctio provident veritatis tempora cupiditate voluptatem
+                nesciunt voluptatibus odit porro tempore exercitationem!
+              </p>
+            </article>
+          </div>
+        </section>
+
+        <section>
+          <h2 class="main-title">Most Reviewed Articles</h2>
+          <div class="articles">
+            <article>
+              <h3>Future of MERN stack</h3>
+              <p class="author">by <span>John Smith</span></p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
+                culpa, molestias officia voluptatibus eaque assumenda nesciunt
+                ratione, modi repellendus deleniti corporis doloribus iusto, ab
+                libero veritatis quasi. Qui, blanditiis earum!
+              </p>
+              <p>
+                dolor sit amet, consectetur adipisicing elit. Dignissimos,
+                repellendus!
+              </p>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Distinctio provident veritatis tempora cupiditate voluptatem
+                nesciunt voluptatibus odit porro tempore exercitationem!
+              </p>
+            </article>
+            <article>
+              <h3>Leran Git & Github</h3>
+              <p class="author">by <span>Tom Odel</span></p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
+                culpa, molestias officia voluptatibus eaque assumenda nesciunt
+                ratione, modi repellendus deleniti corporis doloribus iusto, ab
+                libero veritatis quasi. Qui, blanditiis earum!
+              </p>
+              <p>
+                dolor sit amet, consectetur adipisicing elit. Dignissimos,
+                repellendus!
+              </p>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Distinctio provident veritatis tempora cupiditate voluptatem
+                nesciunt voluptatibus odit porro tempore exercitationem!
+              </p>
+            </article>
+          </div>
+        </section>
+      </div>
+    </main>
+    <footer class="footer">
+      <div class="container">
+        <p>Journey of learning Git. 2025</p>
+      </div>
+    </footer>
+  </body>
 </html>
