Add Scroll To Top Button

--- a/index.html
+++ b/index.html
@@ -101,10 +101,13 @@
         </section>
       </div>
     </main>
+    <div class="scroll-top">UP</div>
     <footer class="footer">
       <div class="container">
         <p>Journey of learning Git. 2025</p>
       </div>
     </footer>
+
+    <script src="./js//script.js"></script>
   </body>
 </html>
